--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
-BASE_URL=https://shazam.p.rapidapi.com
-RAPID_KEY=
-RAPID_HOST=shazam.p.rapidapi.com
+VITE_API_BASE_URL=https://shazam.p.rapidapi.com
+VITE_RAPID_KEY=
+VITE_RAPID_HOST=shazam.p.rapidapi.com
