--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
-VITE_API_BASE_URL=https://shazam.p.rapidapi.com
+VITE_API_BASE_URL=https://spotify23.p.rapidapi.com
 VITE_RAPID_KEY=
-VITE_RAPID_HOST=shazam.p.rapidapi.com
+VITE_RAPID_HOST=spotify23.p.rapidapi.com
